Create an example for the c++ api.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(TIRO_LTO "Enable link time optimization (if supported)." OFF)
 option(TIRO_COV "Code coverage analysis. Build mode should be Debug." OFF)
 option(TIRO_SAN "Enable compiling with sanitizer flags (GCC only)." OFF)
 option(TIRO_TESTS "Build unit test target." ${TIRO_DEV})
+option(TIRO_EXAMPLES "Build example projects." ${TIRO_DEV})
 option(TIRO_DOCS "Enable documentation build target (use target doc to build)." OFF)
 option(TIRO_RTTI "Enable or disable building with runtime type information." OFF)
 
@@ -35,6 +36,7 @@ option(TIRO_SKIP_SHARED "Build without shared libaries" OFF)
 
 message(STATUS "TIRO_DEV=${TIRO_DEV}")
 message(STATUS "TIRO_TESTS=${TIRO_TESTS}")
+message(STATUS "TIRO_EXAMPLES=${TIRO_EXAMPLES}")
 message(STATUS "TIRO_WARNINGS=${TIRO_WARNINGS}")
 message(STATUS "TIRO_WERROR=${TIRO_WERROR}")
 message(STATUS "TIRO_SAN=${TIRO_SAN}")
@@ -146,6 +148,9 @@ endif()
 add_subdirectory(src)
 if(TIRO_TESTS)
     add_subdirectory(test)
+endif()
+if (TIRO_EXAMPLES)
+    add_subdirectory(examples/embed_cpp)
 endif()
 if (TIRO_DOCS)
     add_subdirectory(docs/api)
