Ensure correct working directory when computing the source id.

--- a/support/cmake/GenerateVersion.cmake.in
+++ b/support/cmake/GenerateVersion.cmake.in
@@ -6,11 +6,15 @@ set(PROJECT_VERSION @PROJECT_VERSION@)
 set(PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@)
 set(PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@)
 set(PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@)
+set(PROJECT_SOURCE_DIR @PROJECT_SOURCE_DIR@)
+
+message(STATUS "DIR: ${PROJECT_SOURCE_DIR}")
 
 find_package(Git QUIET)
 if (GIT_FOUND)
     execute_process(
         COMMAND "${GIT_EXECUTABLE}" rev-parse HEAD
+        WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
         OUTPUT_VARIABLE GIT_COMMIT
         OUTPUT_STRIP_TRAILING_WHITESPACE
     )    
@@ -18,6 +22,7 @@ if (GIT_FOUND)
     # empty output if working directory is clean
     execute_process(
         COMMAND "${GIT_EXECUTABLE}" status --porcelain
+        WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
         OUTPUT_VARIABLE GIT_STATUS
         OUTPUT_STRIP_TRAILING_WHITESPACE
     )
