Implement a basic exception type for future use.

--- a/src/vm/objects/CMakeLists.txt
+++ b/src/vm/objects/CMakeLists.txt
@@ -12,6 +12,8 @@ target_sources(tiro_objects
         class.hpp
         coroutine.cpp
         coroutine.hpp
+        exception.cpp
+        exception.hpp
         factory.hpp
         function.cpp
         function.hpp
