Properly cache ccache output.

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -30,11 +30,20 @@ jobs:
           mkdir -p ${{runner.workspace}}/ccache
           echo "CCACHE_DIR=${{runner.workspace}}/ccache" >> $GITHUB_ENV
 
+      - name: Prepare ccache timestamp
+        id: ccache_cache_timestamp
+        shell: cmake -P {0}
+        run: |
+          string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
+          message("::set-output name=timestamp::${current_date}")
+
       - name: Cache compiled output
         uses: actions/cache@v2
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ccache-0
+          key: ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
+          restore-keys: |
+            ccache-
 
       - name: Cache dependencies
         uses: actions/cache@v2
