--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -2,26 +2,30 @@ name: Test Build
 
 on: [push]
 
-env:
-  BUILD_TYPE: Debug
-  CMAKE_GENERATOR: Ninja
-  CC: gcc-8
-  CXX: g++-8
-
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - os: "ubuntu-latest"
+            cc: "gcc-8"
+            cxx: "g++8"
+
+    runs-on: ${{ matrix.os }}
+
+    env:
+      BUILD_TYPE: Debug
+      CMAKE_GENERATOR: Ninja
+      CC: ${{ matrix.cc }}
+      CXX: ${{ matrix.cxx }}
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Install build dependencies
         shell: bash
-        run: sudo apt-get update && sudo apt-get install -y build-essential g++-8 ninja-build cmake ccache
+        run: sudo apt-get update && sudo apt-get install -y build-essential ninja-build cmake ccache ${{ matrix.cc }} ${{ matrix.cxx }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
 
       - name: Create Build Environment
         shell: bash
