--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -7,9 +7,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: "ubuntu-latest"
-            cc: "gcc-8"
-            cxx: "g++8"
+          - os: ubuntu-latest
+            cc: gcc-8
+            cxx: g++8
 
     runs-on: ${{ matrix.os }}
 
@@ -45,14 +45,14 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ccache-${{ steps.timestamp.outputs.timestamp }}
-          restore-keys: ccache-
+          key: ccache-${{ join(matrix.*) }}-${{ steps.timestamp.outputs.timestamp }}
+          restore-keys: ccache-${{ join(matrix.*) }}-
 
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
           path: ${{runner.workspace}}/build/_deps
-          key: deps-${{ hashFiles('Dependencies.cmake') }}
+          key: deps-${{ join(matrix.*) }}-${{ hashFiles('Dependencies.cmake') }}
 
       - name: Setup ccache
         shell: bash
