Introduce SemanticAst structure to keep semantic information together.

--- a/src/compiler/semantics/CMakeLists.txt
+++ b/src/compiler/semantics/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(tiro_objects
     PRIVATE
         fwd.hpp
-        
+
+        analysis.cpp
+        analysis.hpp
         structure_check.cpp
         structure_check.hpp
         symbol_resolution.cpp
