--- a/src/compiler/CMakeLists.txt
+++ b/src/compiler/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(ir_gen)
 add_subdirectory(ir_passes)
 add_subdirectory(parser)
 add_subdirectory(semantics)
+add_subdirectory(syntax)
 
 target_sources(tiro_objects
     PRIVATE
