Implement blocks, ifs and defers.

--- a/test/unit_tests/compiler/syntax/CMakeLists.txt
+++ b/test/unit_tests/compiler/syntax/CMakeLists.txt
@@ -3,4 +3,10 @@ target_sources(unit_tests
         lexer_test.cpp
         token_set_test.cpp
         parse_expr_test.cpp
+        parse_stmt_test.cpp
+
+        syntax_assert.cpp
+        syntax_assert.hpp
+        syntax_tree.cpp
+        syntax_tree.hpp
 )
