Parse assert statements.

--- a/src/compiler/syntax/CMakeLists.txt
+++ b/src/compiler/syntax/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(tiro_objects
         operators.hpp
         parse_expr.cpp
         parse_expr.hpp
+        parse_misc.cpp
+        parse_misc.hpp
         parse_stmt.cpp
         parse_stmt.hpp
         parser_event.cpp
