Implement parsing and tests for top level items.

--- a/test/unit_tests/compiler/syntax/CMakeLists.txt
+++ b/test/unit_tests/compiler/syntax/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(unit_tests
         lexer_test.cpp
         token_set_test.cpp
         parse_expr_test.cpp
+        parse_item_test.cpp
         parse_stmt_test.cpp
 
         syntax_assert.cpp
