Begin work on new ast construction algorithm.

--- a/src/compiler/ast_gen/CMakeLists.txt
+++ b/src/compiler/ast_gen/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(tiro_objects
     PRIVATE
         fwd.hpp
 
-        map_ast.cpp
-        map_ast.hpp
+        build_ast.cpp
+        build_ast.hpp
 )
