Expose the concrete syntax tree via the public api and improve json formatting a bit.

--- a/src/compiler/syntax/CMakeLists.txt
+++ b/src/compiler/syntax/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(tiro_objects
         
         build_syntax_tree.cpp
         build_syntax_tree.hpp
+        dump.cpp
+        dump.hpp
         lexer.cpp
         lexer.hpp
         parser_event.cpp
