--- a/src/compiler/ast_gen/CMakeLists.txt
+++ b/src/compiler/ast_gen/CMakeLists.txt
@@ -4,4 +4,11 @@ target_sources(tiro_objects
 
         build_ast.cpp
         build_ast.hpp
+        node_reader.hpp
+        operators.cpp
+        operators.hpp
+        scanner.cpp
+        scanner.hpp
+        typed_nodes.cpp
+        typed_nodes.hpp
 )
