--- a/docs/api/Doxyfile.in
+++ b/docs/api/Doxyfile.in
@@ -2228,7 +2228,7 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             = DOXYGEN=1 \
+PREDEFINED             = TIRO_BUILDING_DOCS=1 \
                          TIRO_API= \
                          TIRO_WARN_UNUSED=
 
