--- a/test/unit_tests/vm/CMakeLists.txt
+++ b/test/unit_tests/vm/CMakeLists.txt
@@ -8,7 +8,7 @@ target_sources(unit_tests
     PRIVATE
         context_test.cpp
         hash_test.cpp
-        load_module_test.cpp
+        module_loader_test.cpp
         math_test.cpp
         module_registry_test.cpp
 )
