Initial debug_repr implementation (without pretty printing).

--- a/src/vm/modules/CMakeLists.txt
+++ b/src/vm/modules/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(tiro_objects
     PRIVATE
+        dump.cpp
+        dump.hpp
         module_builder.cpp
         module_builder.hpp
         modules.hpp
