Move module related code into modules directory

--- a/test/unit_tests/vm/CMakeLists.txt
+++ b/test/unit_tests/vm/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(eval)
 add_subdirectory(handles)
 add_subdirectory(heap)
+add_subdirectory(modules)
 add_subdirectory(object_support)
 add_subdirectory(objects)
 
@@ -9,7 +10,5 @@ target_sources(unit_tests
         context_test.cpp
         error_utils_test.cpp
         hash_test.cpp
-        module_loader_test.cpp
         math_test.cpp
-        module_registry_test.cpp
 )
