--- a/src/vm/CMakeLists.txt
+++ b/src/vm/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(handles)
 add_subdirectory(heap)
 add_subdirectory(builtins)
+add_subdirectory(modules)
 add_subdirectory(object_support)
 add_subdirectory(objects)
 
@@ -17,10 +18,6 @@ target_sources(tiro_objects
         interpreter.hpp
         math.cpp
         math.hpp
-        module_loader.cpp
-        module_loader.hpp
-        module_registry.cpp
-        module_registry.hpp
         type_system.cpp
         type_system.hpp
 )
