Move most eval tests to new target

--- a/test/eval_tests/CMakeLists.txt
+++ b/test/eval_tests/CMakeLists.txt
@@ -4,6 +4,17 @@ add_executable(eval_tests
     eval_test.hpp
 
     containers_test.cpp
+    control_flow_test.cpp
+    example_test.cpp
+    functions_test.cpp
+    modules_test.cpp
+    objects_test.cpp
+    operators_test.cpp
+    order_test.cpp
+    results_test.cpp
+    std_lib_test.cpp
+    strings_test.cpp
+    variables_test.cpp
 )
 target_link_libraries(eval_tests PRIVATE common_flags tiro::tiro fmt::fmt Catch2::Catch2)
 target_include_directories(eval_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
