Finish reimplementation of tiro_run

--- a/src/run/CMakeLists.txt
+++ b/src/run/CMakeLists.txt
@@ -1,25 +1,10 @@
-# TODO this executable should link against the dynamic or static libraries
-add_executable(tiro_run main.cpp)
-target_link_libraries(tiro_run PRIVATE common_flags)
-target_link_libraries(tiro_run PRIVATE tiro_objects)
+add_executable(tiro_run
+    main.cpp
+)
+target_link_libraries(tiro_run PRIVATE common_flags tiro cxxopts fmt::fmt)
+target_compile_options(tiro_run PRIVATE "-frtti")
 
 # stdc++fs not needed for apple clang
 if((CMAKE_CXX_COMPILER_ID MATCHES "GNU") OR ((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") AND NOT CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC"))
     target_link_libraries(tiro_run PRIVATE stdc++fs)
-endif()
-
-# A test consumer for the c api
-# TODO compiler independent compile flags
-add_executable(tiro_run_c c_main.c)
-target_link_libraries(tiro_run_c PRIVATE common_flags)
-target_link_libraries(tiro_run_c PRIVATE tiro)
-
-
-add_executable(tiro_run_new main_new.cpp)
-target_link_libraries(tiro_run_new PRIVATE common_flags tiro cxxopts fmt::fmt)
-target_compile_options(tiro_run_new PRIVATE "-frtti")
-
-# stdc++fs not needed for apple clang
-if((CMAKE_CXX_COMPILER_ID MATCHES "GNU") OR ((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") AND NOT CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC"))
-    target_link_libraries(tiro_run_new PRIVATE stdc++fs)
 endif()
