start development on new heap.

--- a/test/unit_tests/vm/heap/CMakeLists.txt
+++ b/test/unit_tests/vm/heap/CMakeLists.txt
@@ -3,4 +3,6 @@ target_sources(unit_tests
         collector_test.cpp
         heap_test.cpp
         memory_test.cpp
+
+        new_heap_test.cpp
 )
