--- a/src/vm/heap/CMakeLists.txt
+++ b/src/vm/heap/CMakeLists.txt
@@ -9,4 +9,7 @@ target_sources(tiro_objects
         heap.hpp
         memory.cpp
         memory.hpp
+
+        new_heap.cpp
+        new_heap.hpp
 )
