Optimize log2/ceil_pow operations and introduce bitops header

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(tiro_objects
         assert.cpp
         assert.hpp
         debug.hpp
+        bitops.hpp
         defs.cpp
         defs.hpp
         error.hpp
