Sketch implementation of new collector

--- a/src/vm/heap/CMakeLists.txt
+++ b/src/vm/heap/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(tiro_objects
         memory.cpp
         memory.hpp
 
+        new_collector.cpp
+        new_collector.hpp
         new_heap.cpp
         new_heap.hpp
 )
