New heap and gabrage collector implementation (#23)
Closes #10

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,9 +3,9 @@ target_sources(tiro_objects
         assert.cpp
         assert.hpp
         debug.hpp
+        bitops.hpp
         defs.cpp
         defs.hpp
-        dynamic_bitset.hpp
         error.hpp
         error.cpp
         enum_flags.hpp
