--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ include(GNUInstallDirs)
 option(TIRO_DEV "Enable common development settings." OFF)
 option(TIRO_LTO "Enable link time optimization (if supported)." OFF)
 option(TIRO_COV "Code coverage analysis. Build mode should be Debug." OFF)
+option(TIRO_IWYU "Runs include-what-you-use when building the library" OFF)
 option(TIRO_SAN "Enable compiling with sanitizer flags (GCC only)." OFF)
 option(TIRO_TESTS "Build unit test target." ${TIRO_DEV})
 option(TIRO_EXAMPLES "Build example projects." ${TIRO_DEV})
@@ -43,6 +44,7 @@ message(STATUS "TIRO_WERROR=${TIRO_WERROR}")
 message(STATUS "TIRO_SAN=${TIRO_SAN}")
 message(STATUS "TIRO_LTO=${TIRO_LTO}")
 message(STATUS "TIRO_COV=${TIRO_COV}")
+message(STATUS "TIRO_IWYU=${TIRO_IWYU}")
 message(STATUS "TIRO_SKIP_THREADS=${TIRO_SKIP_THREADS}")
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
@@ -59,6 +61,10 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
         STRING "Choose the type of build." FORCE)
     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
         "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
+
+if (TIRO_IWYU)
+    find_program(IWYU_PATH NAMES include-what-you-use iwyu REQUIRED)
 endif()
 
 if(TIRO_COV)
